<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="horizontal"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="600dp"
        android:background="@android:color/white"
        android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/darkblue"
                android:id="@+id/actionbar"
                >
                <TextView
                    android:id="@+id/infoTitle"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textColor="@android:color/white"
                    android:text="@string/event_detail" />

            </RelativeLayout>
            <LinearLayout android:layout_width="match_parent"
                android:padding="16dp"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_gray"
                    android:textSize="16sp"
                    android:text="@string/title" />

                <TextView
                    android:id="@+id/txtTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:text="-" />

                <LinearLayout android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="2">

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_marginTop="16dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/dark_gray"
                                android:textSize="16sp"
                                android:text="@string/date" />

                            <TextView
                                android:id="@+id/txtDate"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black"
                                android:textSize="20sp"
                                android:text="-" />

                        </LinearLayout>
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_marginTop="16dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/dark_gray"
                                android:textSize="16sp"
                                android:text="@string/time" />

                            <TextView
                                android:id="@+id/txtTime"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black"
                                android:textSize="20sp"
                                android:text="-" />

                        </LinearLayout>
                </LinearLayout>


                <LinearLayout android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_marginTop="16dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/dark_gray"
                            android:textSize="16sp"
                            android:text="@string/pic" />

                        <TextView
                            android:id="@+id/txtPic"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:text="-" />


                    </LinearLayout>
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_marginTop="16dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/dark_gray"
                            android:textSize="16sp"
                            android:text="@string/email" />

                        <TextView
                            android:id="@+id/txtEmail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:text="-" />

                    </LinearLayout>
                </LinearLayout>
                <LinearLayout android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_marginTop="16dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/dark_gray"
                            android:textSize="16sp"
                            android:text="@string/division" />

                        <TextView
                            android:id="@+id/txtDivision"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:text="-" />


                    </LinearLayout>
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_marginTop="16dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/dark_gray"
                            android:textSize="16sp"
                            android:text="@string/amount" />

                        <TextView
                            android:id="@+id/txtAmount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:text="-" />

                    </LinearLayout>
                </LinearLayout>




            </LinearLayout>

            <Button
                android:id="@+id/btnExit"
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:padding="8dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="8dp"
                android:textColor="@color/colorPrimary"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/close" />
    </LinearLayout>
</LinearLayout>