<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="horizontal"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="600dp"
        android:background="@android:color/white"
        android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/darkblue"
                android:id="@+id/actionbar"
                >
                <ImageView
                    android:id="@+id/imageView2"
                    android:scaleType="centerCrop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    app:srcCompat="@mipmap/meeting_root" />
            </RelativeLayout>
            <LinearLayout android:layout_width="match_parent"
                android:padding="16dp"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_gray"
                    android:textSize="16sp"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/txtName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:text="-" />

                <LinearLayout android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="3">

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_marginTop="16dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/dark_gray"
                                android:textSize="16sp"
                                android:text="@string/building" />

                            <TextView
                                android:id="@+id/txtBuilding"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black"
                                android:textSize="20sp"
                                android:text="-" />

                        </LinearLayout>
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_marginTop="16dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/dark_gray"
                                android:textSize="16sp"
                                android:text="@string/floor" />

                            <TextView
                                android:id="@+id/txtFloor"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black"
                                android:textSize="20sp"
                                android:text="-" />

                        </LinearLayout>
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_marginTop="16dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/dark_gray"
                            android:textSize="16sp"
                            android:text="@string/department" />

                        <TextView
                            android:id="@+id/txtDepartment"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:text="-" />

                    </LinearLayout>
                </LinearLayout>


                <LinearLayout android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_marginTop="16dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/dark_gray"
                            android:textSize="16sp"
                            android:text="@string/capacity" />

                        <TextView
                            android:id="@+id/txtCapacity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:text="-" />


                    </LinearLayout>
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_marginTop="16dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/dark_gray"
                            android:textSize="16sp"
                            android:text="@string/category" />

                        <TextView
                            android:id="@+id/txtCategory"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:text="-" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btnExit"
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:padding="8dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="8dp"
                android:textColor="@color/colorPrimary"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/close" />
    </LinearLayout>
</LinearLayout>